Fix the source variable name for template module
Change-Id: I1dc9802f92298bc498f73e47fe4d66ea1fed5c05

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Add static ip to nic on provisioning network
   become: true
   template:
-    source: ifcfg-virthost-provision.j2
+    src: ifcfg-virthost-provision.j2
     dest: /etc/sysconfig/network-scripts/ifcfg-{{ virthost_provisioning_interface }}
     mode: 644
     owner: root
