--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,3 +11,8 @@
 - name: Ensure nic is up
   become: true
   command: ifup {{ virthost_provisioning_interface }}
+
+- name: Add provisioning interface to the "brovc" bridge
+  become: true
+  command: "brctl addif brovc {{ virthost_provisioning_interface }}"
+  ignore_errors: true
