--- a/project.config
+++ b/project.config
@@ -2,14 +2,22 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group user/mathieu bultel (matbu)
+	owner = group user/ronelle landy (rlandy)
 [access "refs/for/refs/*"]
 	read = group user/mathieu bultel (matbu)
 	push = group user/mathieu bultel (matbu)
+	read = group user/ronelle landy (rlandy)
+	push = group user/ronelle landy (rlandy)
 	label-Code-Review = -2..+2 group user/mathieu bultel (matbu)
+	label-Code-Review = -2..+2 group user/ronelle landy (rlandy)
 	label-Verified = -1..+1 group user/mathieu bultel (matbu)
+	label-Verified = -1..+1 group user/ronelle landy (rlandy)
 	rebase = group user/mathieu bultel (matbu)
+	rebase = group user/ronelle landy (rlandy)
 	removeReviewer = group user/mathieu bultel (matbu)
+	removeReviewer = group user/ronelle landy (rlandy)
 	submit = group user/mathieu bultel (matbu)
+	submit = group user/ronelle landy (rlandy)
 [access "refs/heads/*"]
 	read = group user/mathieu bultel (matbu)
 	create = group user/mathieu bultel (matbu)
