Modify access rules

--- a/project.config
+++ b/project.config
@@ -10,6 +10,11 @@
 	rebase = group user/mathieu bultel (matbu)
 	removeReviewer = group user/mathieu bultel (matbu)
 	submit = group user/mathieu bultel (matbu)
+	owner = group user/Ronelle Landy (rlandy)
+	pushMerge = group user/Ronelle Landy (rlandy)
+	labelAs-Code-Review = -2..+2 group user/Ronelle Landy (rlandy)
+	labelAs-Verified = -1..+1 group user/Ronelle Landy (rlandy)
+	submitAs = group user/Ronelle Landy (rlandy)
 [access "refs/heads/*"]
 	read = group user/mathieu bultel (matbu)
 	create = group user/mathieu bultel (matbu)
