--- a/project.config
+++ b/project.config
@@ -4,17 +4,21 @@
 	owner = group user/mathieu bultel (matbu)
 [access "refs/for/refs/*"]
 	read = group user/mathieu bultel (matbu)
+	read = group user/Ronelle Landy (rlandy)
 	push = group user/mathieu bultel (matbu)
+	push = group user/Ronelle Landy (rlandy)
 	label-Code-Review = -2..+2 group user/mathieu bultel (matbu)
+	label-Code-Review = -2..+2 group user/Ronelle Landy (rlandy)
 	label-Verified = -1..+1 group user/mathieu bultel (matbu)
+	label-Verified = -1..+1 group user/Ronelle Landy (rlandy)
 	rebase = group user/mathieu bultel (matbu)
+	rebase = group user/Ronelle Landy (rlandy)
 	removeReviewer = group user/mathieu bultel (matbu)
+	removeReviewer = group user/Ronelle Landy (rlandy)
 	submit = group user/mathieu bultel (matbu)
+	submit = group user/Ronelle Landy (rlandy)
 	owner = group user/Ronelle Landy (rlandy)
-	pushMerge = group user/Ronelle Landy (rlandy)
-	labelAs-Code-Review = -2..+2 group user/Ronelle Landy (rlandy)
-	labelAs-Verified = -1..+1 group user/Ronelle Landy (rlandy)
-	submitAs = group user/Ronelle Landy (rlandy)
+	owner = group user/Ronelle Landy (rlandy)
 [access "refs/heads/*"]
 	read = group user/mathieu bultel (matbu)
 	create = group user/mathieu bultel (matbu)
