Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,6 +2,7 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group user/mathieu bultel (matbu)
+	label-Verified = -1..+1 group user/mathieu bultel (matbu)
 [access "refs/for/refs/*"]
 	read = group user/mathieu bultel (matbu)
 	push = group user/mathieu bultel (matbu)
