Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,9 +1,9 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
-	owner = group user/mathieu bultel (matbu)
+	owner = group user/Ronelle Landy (rlandy)
 	label-Verified = -1..+1 group rdo-ci-group
-	label-Verified = -1..+1 group user/mathieu bultel (matbu)
+	label-Verified = -1..+1 group user/Ronelle Landy (rlandy)
 [access "refs/for/refs/*"]
 	read = group user/Ronelle Landy (rlandy)
 	read = group user/mathieu bultel (matbu)
@@ -20,11 +20,18 @@
 	submit = group user/Ronelle Landy (rlandy)
 	submit = group user/mathieu bultel (matbu)
 [access "refs/heads/*"]
+	read = group user/Ronelle Landy (rlandy)
 	read = group user/mathieu bultel (matbu)
+	create = group user/Ronelle Landy (rlandy)
 	create = group user/mathieu bultel (matbu)
+	push = +force group user/Ronelle Landy (rlandy)
 	push = +force group user/mathieu bultel (matbu)
+	pushMerge = group user/Ronelle Landy (rlandy)
 	pushMerge = group user/mathieu bultel (matbu)
 [access "refs/tags/*"]
+	push = +force group user/Ronelle Landy (rlandy)
 	push = +force group user/mathieu bultel (matbu)
+	pushTag = group user/Ronelle Landy (rlandy)
 	pushTag = group user/mathieu bultel (matbu)
+	pushSignedTag = group user/Ronelle Landy (rlandy)
 	pushSignedTag = group user/mathieu bultel (matbu)
