--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,3 +12,12 @@
   become: yes
   shell: >
     "{{ working_dir }}"/add-provisioning-interface.sh
+  register: bridge_status
+  ignore_errors: true
+
+# if the above task fails it's possible the bridge has already
+#  been added, this checks for that error message and fails
+#  if it finds a different error
+- name: Check if interface already added to "brovc" bridge
+  command: /bin/false
+  when: "('is already a member of a bridge' not in bridge_status.stdout) and ( bridge_status | failed )"
