--- a/project.config
+++ b/project.config
@@ -2,36 +2,51 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group user/Ronelle Landy (rlandy)
+        owner = group oooq-core
 	label-Verified = -1..+1 group rdo-ci-group
 	label-Verified = -1..+1 group user/Ronelle Landy (rlandy)
 [access "refs/for/refs/*"]
 	read = group user/Ronelle Landy (rlandy)
 	read = group user/mathieu bultel (matbu)
+        read = group oooq-core
 	push = group user/Ronelle Landy (rlandy)
 	push = group user/mathieu bultel (matbu)
+        push = group oooq-core
 	label-Code-Review = -2..+2 group user/Ronelle Landy (rlandy)
 	label-Code-Review = -2..+2 group user/mathieu bultel (matbu)
+        label-Code-Review = -2..+2 group oooq-core
 	label-Verified = -1..+1 group user/Ronelle Landy (rlandy)
 	label-Verified = -1..+1 group user/mathieu bultel (matbu)
+        label-Verified = -1..+1 group oooq-core
 	rebase = group user/Ronelle Landy (rlandy)
 	rebase = group user/mathieu bultel (matbu)
+        rebase = group oooq-core
 	removeReviewer = group user/Ronelle Landy (rlandy)
 	removeReviewer = group user/mathieu bultel (matbu)
+        removeReviewer = group oooq-core
 	submit = group user/Ronelle Landy (rlandy)
 	submit = group user/mathieu bultel (matbu)
+        submit = group oooq-core
 [access "refs/heads/*"]
 	read = group user/Ronelle Landy (rlandy)
 	read = group user/mathieu bultel (matbu)
+        read = group oooq-core
 	create = group user/Ronelle Landy (rlandy)
 	create = group user/mathieu bultel (matbu)
+        create = group oooq-core
 	push = +force group user/Ronelle Landy (rlandy)
 	push = +force group user/mathieu bultel (matbu)
+        push = +force group oooq-core
 	pushMerge = group user/Ronelle Landy (rlandy)
 	pushMerge = group user/mathieu bultel (matbu)
+        pushMerge = group oooq-core
 [access "refs/tags/*"]
 	push = +force group user/Ronelle Landy (rlandy)
 	push = +force group user/mathieu bultel (matbu)
+        push = +force group oooq-core
 	pushTag = group user/Ronelle Landy (rlandy)
 	pushTag = group user/mathieu bultel (matbu)
+        pushTag = group oooq-core
 	pushSignedTag = group user/Ronelle Landy (rlandy)
 	pushSignedTag = group user/mathieu bultel (matbu)
+        pushSignedTag = group oooq-core
