Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,6 +2,7 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group user/Ronelle Landy (rlandy)
+	owner = group user/wes hayutin (weshayutin)
 	label-Verified = -1..+1 group rdo-ci-group
 	label-Verified = -1..+1 group user/Ronelle Landy (rlandy)
 [access "refs/for/refs/*"]
