Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,15 +1,18 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
+	owner = group oooq-core
 	owner = group user/Ronelle Landy (rlandy)
 	owner = group user/wes hayutin (weshayutin)
 	label-Verified = -1..+1 group rdo-ci-group
 	label-Verified = -1..+1 group user/Ronelle Landy (rlandy)
 [access "refs/for/refs/*"]
+	read = group oooq-core
 	read = group user/Ronelle Landy (rlandy)
 	read = group user/mathieu bultel (matbu)
 	push = group user/Ronelle Landy (rlandy)
 	push = group user/mathieu bultel (matbu)
+	label-Code-Review = -2..+2 group oooq-core
 	label-Code-Review = -2..+2 group user/Ronelle Landy (rlandy)
 	label-Code-Review = -2..+2 group user/mathieu bultel (matbu)
 	label-Verified = -1..+1 group user/Ronelle Landy (rlandy)
@@ -18,6 +21,7 @@
 	rebase = group user/mathieu bultel (matbu)
 	removeReviewer = group user/Ronelle Landy (rlandy)
 	removeReviewer = group user/mathieu bultel (matbu)
+	submit = group oooq-core
 	submit = group user/Ronelle Landy (rlandy)
 	submit = group user/mathieu bultel (matbu)
 [access "refs/heads/*"]
