--- a/playbooks/baremetal-virt-undercloud-tripleo.yml
+++ b/playbooks/baremetal-virt-undercloud-tripleo.yml
@@ -99,7 +99,7 @@
 
 - name:  Deploy the overcloud
   hosts: undercloud
-  gather_facts: yes
+  gather_facts: no
   roles:
     - tripleo-overcloud
 
