Modified project settings

--- a/project.config
+++ b/project.config
@@ -46,9 +46,11 @@
 	push = group oooq-core
 	push = +force group user/Ronelle Landy (rlandy)
 	push = +force group user/mathieu bultel (matbu)
-	pushTag = group oooq-core
-	pushTag = group user/Ronelle Landy (rlandy)
-	pushTag = group user/mathieu bultel (matbu)
-	pushSignedTag = group oooq-core
-	pushSignedTag = group user/Ronelle Landy (rlandy)
-	pushSignedTag = group user/mathieu bultel (matbu)
+	createTag = group oooq-core
+	createTag = group user/Ronelle Landy (rlandy)
+	createTag = group user/mathieu bultel (matbu)
+	createSignedTag = group oooq-core
+	createSignedTag = group user/Ronelle Landy (rlandy)
+	createSignedTag = group user/mathieu bultel (matbu)
+[project]
+	state = read only
